--- a/patch_ubuntu.yml
+++ b/patch_ubuntu.yml
@@ -1,6 +1,6 @@
 - hosts: ubuntu
-  remote_user: "{{ noob_user }}"
-  ansible_password: "{{ noob_password }}"
+  ansible_user: "{{ a_user }}"
+  ansible_password: "{{ a_password }}"
   become: yes
   become_user: "{{ voltron }}"
   become_pass: "{{ voltron_pwd }}"
