--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "axios": "^1.5.0",
     "discord.js": "^14.11.0",
-    "discordjs-reaction-role": "^3.1.0"
+    "discordjs-reaction-role": "^3.1.0",
+    "dotenv": "^16.3.1"
   }
 }
