--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "axios": "^1.5.0",
     "discord.js": "^14.11.0",
     "discordjs-reaction-role": "^3.1.0",
-    "dotenv": "^16.3.1"
+    "openai-api": "^1.3.1"
   }
 }
