--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "discord.js": "^14.11.0",
     "discordjs-reaction-role": "^3.1.0",
+    "dotenv": "^16.3.1",
     "openai-api": "^1.3.1"
   }
 }
