--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "@tectalic/openai": "^0.3.1",
     "discord.js": "^14.11.0",
-    "discordjs-reaction-role": "^3.1.0"
+    "discordjs-reaction-role": "^3.1.0",
+    "openai": "^4.12.1"
   }
 }
