--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,14 +3,15 @@ name: Docker Image CI
 on:
   push:
     branches:
-      - master
+      - dev
 
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4 # Use the latest version of the checkout action
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Login to GitHub Container Registry
         run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
