--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,10 +17,10 @@ jobs:
         run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
 
       - name: Build Docker image
-        run: docker build -t ghcr.io/${{ github.repository }}:${{ github.event_name }}:${{ github.sha }}:latest .
+        run: docker build -t ghcr.io/${{ github.repository }}:${{ github.event_name }}-${{ github.sha }}-latest .
 
       - name: Push Docker image
-        run: docker push ghcr.io/${{ github.repository }}:${{ github.event_name }}:${{ github.sha }}:latest
+        run: docker push ghcr.io/${{ github.repository }}:${{ github.event_name }}-${{ github.sha }}-latest
 
   cleanup_old_images:
     runs-on: ubuntu-latest
