--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,11 +16,15 @@ jobs:
       - name: Login to GitHub Container Registry
         run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
 
+      - name: Extract push comment as tag
+        id: extract_tag
+        run: echo "::set-output name=TAG::${{ github.event.head_commit.message }}"
+
       - name: Build Docker image
-        run: docker build -t ghcr.io/${{ github.repository }}:${{ github.event_name }}-${{ github.sha }}-latest .
+        run: docker build -t ghcr.io/${{ github.repository }}:${{ steps.extract_tag.outputs.TAG }} .
 
       - name: Push Docker image
-        run: docker push ghcr.io/${{ github.repository }}:${{ github.event_name }}-${{ github.sha }}-latest
+        run: docker push ghcr.io/${{ github.repository }}:${{ steps.extract_tag.outputs.TAG }}
 
   cleanup_old_images:
     runs-on: ubuntu-latest
@@ -34,7 +38,7 @@ jobs:
         run: |
           IMAGE_NAME=ghcr.io/${{ github.repository }}
           ALL_IMAGES=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep $IMAGE_NAME | sort -r)
-          OLD_IMAGES=$(echo "$ALL_IMAGES" | sed -n '6,$p')
+          OLD_IMAGES=$(echo "$ALL_IMAGES" | tail -n +6)
           
           if [ -n "$OLD_IMAGES" ]; then
             echo "Removing older images:"
