--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,11 +32,11 @@ jobs:
 
       - name: Cleanup older images
         run: |
-          IMAGE_NAME=ghcr.io/${{ github.repository }}
+          IMAGE_NAME=ghcr.io/blinddreamer/the-kings-affirmation
           ALL_IMAGES=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep $IMAGE_NAME)
           CURRENT_IMAGES=$(echo "$ALL_IMAGES" | grep "WEdaKINGZ")
           OLD_IMAGES=$(echo "$ALL_IMAGES" | grep -v "WEdaKINGZ" | sort -r | tail -n +6)
-          
+
           if [ -n "$OLD_IMAGES" ]; then
             echo "Removing older images:"
             echo "$OLD_IMAGES" | xargs -I {} docker rmi {}
@@ -45,9 +45,10 @@ jobs:
           fi
 
           # Check if there are more than 5 images with the "WEdaKINGZ" tag
-          if [ $(echo "$CURRENT_IMAGES" | wc -l) -gt 5 ]; then
+          if [ "$(echo "$CURRENT_IMAGES" | wc -l)" -gt 5 ]; then
             echo "Removing excess images with 'WEdaKINGZ' tag:"
             echo "$CURRENT_IMAGES" | tail -n +6 | xargs -I {} docker rmi {}
           else
             echo "No excess images with 'WEdaKINGZ' tag to remove."
           fi
+
