--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.11.0",
     "discordjs-reaction-role": "^3.1.0",
     "openai": "^4.12.1"
