--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,56 +1,22 @@
-name: Docker Image CI
+name: Build and Push Docker image to Docker Hub
 
-on:
-  push:
-    branches:
-      - master
-
+on: push
 jobs:
-  build_and_push:
+  push_to_registry:
+    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: Check out the repo
         uses: actions/checkout@v4
 
-      - name: Login to GitHub Container Registry
-        run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build Docker image
-        run: docker build -t ghcr.io/${{ github.repository }}:wedakingz .
-
-      - name: Push Docker image
-        run: docker push ghcr.io/${{ github.repository }}:wedakingz
-
-  cleanup_old_images:
-    runs-on: ubuntu-latest
-    needs: build_and_push
-
-    steps:
-      - name: Login to GitHub Container Registry
-        run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
-
-      - name: Count images before tagging
-        id: count_images_before
-        run: echo $(docker images --format="{{.ID}}") | wc -l
-
-      - name: Tag older images with a timestamp-based tag
-        run: |
-          # Set the image name dynamically
-          IMAGE_NAME=ghcr.io/${{ github.repository }}
-
-          # Tag older images with a timestamp-based tag
-          for image in $(docker images --format "{{.ID}} {{.Repository}}:{{.Tag}}" | grep "^${IMAGE_NAME}:.*" | sort -k1,1 | awk '{print $2":"$3}'); do
-            docker tag "$image" "${IMAGE_NAME}:$(date +%Y%m%d%H%M%S)"
-          done
-
-          # List images after tagging to verify tagging
-          docker images
-
-      - name: Count images after tagging
-        id: count_images_after
-        run: echo $(docker images --format="{{.ID}}") | wc -l
-
-      - name: Remove older images if count is greater than 6
-        if: steps.count_images_after.outputs.count > 6
-        run: docker image prune -a
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: blinddreamer/the-kings-affirmation:latest
