--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.11.0",
     "discordjs-reaction-role": "^3.1.0",
+    "mysql2": "^3.6.5",
     "openai": "^4.12.1"
   }
 }
