--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "discord.js": "^14.11.0",
     "discordjs-reaction-role": "^3.1.0",
     "mysql2": "^3.6.5",
-    "openai": "^4.12.1"
+    "openai": "^4.12.1",
+    "yarn": "^1.22.21"
   }
 }
